--- a/honesty.html
+++ b/honesty.html
@@ -20,7 +20,7 @@
                     <a href="resume.html">Resume</a>
                     <a href="contact.html">Contact</a>
                     <a href="honesty.html">Honesty</a>
-                    <a href="main.html">Main</a>
+                    <a href="index.html">Main</a>
                 </nav>
             </div>
         </div>
